<?xml version="1.0" encoding="utf-8"?>
<!--
 SPDX-License-Identifier: Apache-2.0
 Originally developed by Telicent Ltd.; subsequently adapted, enhanced, and maintained by the National Digital Twin Programme.

    Copyright (c) Telicent Ltd.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.


    Modifications made by the National Digital Twin Programme (NDTP)
    © Crown Copyright 2025. This work has been developed by the National Digital Twin Programme
    and is legally attributed to the Department for Business and Trade (UK) as the governing entity.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>uk.gov.dbt.ndtp.jena</groupId>
  <artifactId>rdf-pbac</artifactId>
  <version>0.91.0-SNAPSHOT</version>

  <packaging>pom</packaging>
  <name>IANode ABAC</name>
  <description>An Attribute Based Access Control (ABAC) implementation for Apache Jena RDF Datasets</description>
  <url>https://github.com/National-Node-Net/rdf-pbac</url>

  <developers>
    <developer>
      <name>IANode Developers</name>
      <email>NDTP@businessandtrade.gov.uk</email>
      <organization>Department for Business and Trade</organization>
      <organizationUrl>https://ndtp.co.uk</organizationUrl>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <organization>
    <name>Department for Business and Trade</name>
    <url>https://ndtp.co.uk</url>
  </organization>

  <issueManagement>
    <url>https://github.com/National-Node-Net/rdf-pbac/issues</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git@github.com:National-Node-Net/rdf-pbac</connection>
    <developerConnection>scm:git:git@github.com:National-Node-Net/rdf-pbac</developerConnection>
    <url>https://github.com/National-Node-Net/rdf-pbac</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <!-- Build properties -->
    <build.time.xsd>${maven.build.timestamp}</build.time.xsd>
    <automatic.module.name>uk.gov.dbt.ndtp.rdfabac</automatic.module.name>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.outputTimestamp>2026-09-01T07:28:54Z</project.build.outputTimestamp>
    <java.version>17</java.version>

    <!-- Maven Plugins -->
    <plugin.clean>3.4.1</plugin.clean>
    <plugin.compiler>3.14.0</plugin.compiler>
    <plugin.cyclonedx>2.9.1</plugin.cyclonedx>
    <plugin.dependency>3.8.1</plugin.dependency>
    <plugin.deploy>3.1.4</plugin.deploy>
    <plugin.enforcer>3.5.0</plugin.enforcer>
    <plugin.gpg>3.2.7</plugin.gpg>
    <plugin.install>3.1.4</plugin.install>
    <plugin.jacoco>0.8.12</plugin.jacoco>
    <plugin.jar>3.4.2</plugin.jar>
    <plugin.javadoc>3.11.2</plugin.javadoc>
    <plugin.nexus>1.7.0</plugin.nexus>
    <plugin.resources>3.3.1</plugin.resources>
    <plugin.shade>3.6.0</plugin.shade>
    <plugin.site>3.21.0</plugin.site>
    <plugin.source>3.3.1</plugin.source>
    <plugin.surefire>3.5.2</plugin.surefire>

    <!-- Dependency Plugins -->
    <!-- Internal dependencies -->
    <dependency.jena>5.2.0</dependency.jena>
    <dependency.rocksdb>9.10.0</dependency.rocksdb>

    <!-- External dependencies -->
    <dependency.assert>3.27.3</dependency.assert>
    <dependency.guava>33.4.5-jre</dependency.guava>
    <dependency.jmh>1.37</dependency.jmh>
    <dependency.junit5>5.12.1</dependency.junit5>
    <dependency.junit5-platform>1.12.1</dependency.junit5-platform>
    <dependency.log4j2>2.24.3</dependency.log4j2>
    <dependency.mockito>5.16.1</dependency.mockito>
    <dependency.openhft>0.27ea0</dependency.openhft>
    <dependency.slf4j>2.0.17</dependency.slf4j>
  </properties>

  <modules>
    <module>rdf-abac-lib</module>
    <module>rdf-abac-fuseki</module>
    <module>rdf-abac-fuseki-server</module>
    <module>rdf-abac-eval</module>
    <module>rdf-abac-coverage-report</module>
  </modules>

  <dependencyManagement>
    <dependencies>
    <!-- Internal dependencies -->
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>apache-jena-libs</artifactId>
        <version>${dependency.jena}</version>
        <type>pom</type>
      </dependency>

      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-fuseki-main</artifactId>
        <version>${dependency.jena}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-cmds</artifactId>
        <version>${dependency.jena}</version>
      </dependency>

    <!-- External dependencies -->

      <!-- Logging dependencies -->
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${dependency.log4j2}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j2-impl</artifactId>
        <version>${dependency.log4j2}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${dependency.slf4j}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-fuseki-main</artifactId>
        <version>${dependency.jena}</version>
        <classifier>tests</classifier>
        <scope>test</scope>
      </dependency>

      <!-- JUnit 5 -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${dependency.junit5}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.junit.platform</groupId>
        <artifactId>junit-platform-suite</artifactId>
        <version>${dependency.junit5-platform}</version>
        <scope>test</scope>
      </dependency>

      <!-- Temporary dependencies -->
      <!-- Convergence -->
      <!-- Due to jena 5.1.0 -->
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.18.0</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.18.0</version>
      </dependency>
      <dependency>
        <groupId>jakarta.servlet</groupId>
        <artifactId>jakarta.servlet-api</artifactId>
        <version>6.1.0</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <!-- SBOM : CycloneDX -->
      <plugin>
        <groupId>org.cyclonedx</groupId>
        <artifactId>cyclonedx-maven-plugin</artifactId>
        <version>${plugin.cyclonedx}</version>
        <executions>
          <execution>
            <id>build-sbom-cyclonedx</id>
            <phase>package</phase>
            <goals>
              <goal>makeAggregateBom</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <outputName>${project.artifactId}-${project.version}-bom</outputName>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${plugin.clean}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${plugin.compiler}</version>
        <configuration>
          <release>${java.version}</release>
          <compilerArgument>-proc:none</compilerArgument>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${plugin.dependency}</version>
        <configuration>
          <overWriteReleases>false</overWriteReleases>
          <overWriteIfNewer>true</overWriteIfNewer>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>${plugin.deploy}</version>
      </plugin>

      <!-- Run the enforcer plugin automatically at compile time -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${plugin.enforcer}</version>
        <executions>
          <execution>
            <id>enforce</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration combine.self="override">
              <rules>
                <requireMavenVersion>
                  <version>3.8.6</version>
                </requireMavenVersion>
              </rules>
              <fail>true</fail>
              <failFast>false</failFast>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>${plugin.gpg}</version>
        <executions>
          <execution>
            <goals>
              <goal>sign</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>${plugin.install}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${plugin.jar}</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${plugin.javadoc}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <notimestamp>true</notimestamp>
          <quiet>true</quiet>
          <doclint>none</doclint>
          <version>true</version>
          <show>public</show>
          <encoding>UTF-8</encoding>
          <windowtitle>${project.name} ${project.version}</windowtitle>
          <doctitle>${project.name} ${project.version}</doctitle>
          <bottom>Licensed under the Apache License, Version 2.0</bottom>

          <!-- Settings for @apiNote, @implSpec and @implNote -->
          <tags>
            <tag>
              <name>apiNote</name>
              <placement>a</placement>
              <head>API Note:</head>
            </tag>
            <tag>
              <name>implSpec</name>
              <placement>a</placement>
              <head>Implementation Requirements:</head>
            </tag>
            <tag>
              <name>implNote</name>
              <placement>a</placement>
              <head>Implementation Note:</head>
            </tag>
          </tags>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${plugin.resources}</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${plugin.shade}</version>
      </plugin>

      <!-- Keep the enforcer plugin happy. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>${plugin.site}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${plugin.source}</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${plugin.jacoco}</version>
        <configuration>
          <propertyName>jacocoArgLine</propertyName>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${plugin.surefire}</version>
        <configuration>
          <includes>
            <include>**/TS_*.java</include>
          </includes>
          <argLine>@{jacocoArgLine} -XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <profiles>
    <profile>
      <id>skip-problem-tests-on-windows</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${plugin.surefire}</version>
            <configuration>
              <excludes>
                <exclude>**/TS_ABAC_BulkTestSuite.java</exclude>
                <exclude>**/TS_LabelStoreRocksDB.java</exclude>
              </excludes>
              <argLine>@{jacocoArgLine} -XX:+EnableDynamicAgentLoading</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <distributionManagement>
    <snapshotRepository>
      <id>github</id>
      <url>https://maven.pkg.github.com/National-Node-Net/rdf-pbac</url>
    </snapshotRepository>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/National-Node-Net/rdf-pbac</url>
    </repository>
  </distributionManagement>

</project>
